--- a/NET.S.2018.Popivnenko.20.AntiPattern/NET.S.2018.Popivnenko.20.AntiPattern.csproj
+++ b/NET.S.2018.Popivnenko.20.AntiPattern/NET.S.2018.Popivnenko.20.AntiPattern.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Instructor.cs" />
     <Compile Include="MyBigInterface.cs" />
     <Compile Include="Repository.cs" />
+    <Compile Include="RepositoryViewer.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="ServiceException.cs" />
     <Compile Include="Student.cs" />
